@@ -1,3 +1,7 @@
+2011-09-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/atomic5.ad[sb]: New test.
+
 2011-09-08  Martin Jambor  <mjambor@suse.cz>
 
 	Backport from mainline
